--- a/frontend-student-portal/package.json
+++ b/frontend-student-portal/package.json
@@ -13,6 +13,9 @@
     "@tailwindcss/postcss": "^4.0.14",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.3",
+    "dompurify": "^3.2.4",
+    "jwt-decode": "^4.0.0",
+    "marked": "^15.0.7",
     "pinia": "^3.0.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.14",
