--- a/frontend-student-portal/package.json
+++ b/frontend-student-portal/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^4.0.0",
     "katex": "^0.16.22",
     "marked": "^15.0.7",
+    "mathjax": "^3.2.2",
     "pinia": "^3.0.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.14",
